@@ -13,6 +13,7 @@ HEADERS = \
 	synthv1_ui.h \
 	synthv1_jack.h \
 	synthv1_config.h \
+	synthv1_filter.h \
 	synthv1_wave.h \
 	synthv1_ramp.h \
 	synthv1_list.h \
