@@ -26,6 +26,8 @@
 
 #include "synthv1_list.h"
 
+#include "synthv1_filter.h"
+
 #include "synthv1_fx.h"
 #include "synthv1_reverb.h"
 
@@ -463,139 +465,6 @@ struct synthv1_dyn
 };
 
 
-// (Hal Chamberlin's state variable) filter
-
-class synthv1_filter1
-{
-public:
-
-	enum Type { Low = 0, Band, High, Notch };
-
-	synthv1_filter1(Type type = Low, uint16_t nover = 2)
-		{ reset(type, nover); }
-
-	Type type() const
-		{ return m_type; }
-
-	void reset(Type type = Low, uint16_t nover = 2)
-	{
-		m_type  = type;
-		m_nover = nover;
-
-		m_low   = 0.0f;
-		m_band  = 0.0f;
-		m_high  = 0.0f;
-		m_notch = 0.0f;
-
-		switch (m_type) {
-		case Notch:
-			m_out = &m_notch;
-			break;
-		case High:
-			m_out = &m_high;
-			break;
-		case Band:
-			m_out = &m_band;
-			break;
-		case Low:
-		default:
-			m_out = &m_low;
-			break;
-		}
-	}
-
-	float output(float input, float cutoff, float reso)
-	{
-		const float q = (1.0f - reso);
-
-		for (uint16_t i = 0; i < m_nover; ++i) {
-			m_low  += cutoff * m_band;
-			m_high  = input - m_low - q * m_band;
-			m_band += cutoff * m_high;
-			m_notch = m_high + m_low;
-		}
-
-		return *m_out;
-	}
-
-private:
-
-	Type     m_type;
-
-	uint16_t m_nover;
-
-	float    m_low;
-	float    m_band;
-	float    m_high;
-	float    m_notch;
-
-	float   *m_out;
-};
-
-
-// (Stilson/Smith Moog 24dB/oct) filter
-
-class synthv1_filter2
-{
-public:
-
-	enum Type { Low = 0, Band, High, Notch };
-
-	synthv1_filter2(Type type = Low) { reset(type); }
-
-	Type type() const
-		{ return m_type; }
-
-	void reset(Type type = Low)
-	{
-		m_type = type;
-
-		m_b0 = m_b1 = m_b2 = m_b3 = m_b4 = 0.0f;
-		m_t1 = m_t2 = m_t3 = 0.0f;
-		m_f  = m_p  = m_q  = 0.0f;
-	}
-
-	float output(float input, float cutoff, float reso)
-	{
-		m_q = 1.0f - cutoff;
-		m_p = cutoff + 0.8f * cutoff * m_q;
-		m_f = m_p + m_p - 1.0f;
-		m_q = reso * (1.0f + 0.5f * m_q * (1.0f - m_q + 5.6f * m_q * m_q));
-
-		input -= m_q * m_b4;	// feedback
-
-		m_t1 = m_b1; m_b1 = (input + m_b0) * m_p - m_b1 * m_f;
-		m_t2 = m_b2; m_b2 = (m_b1 + m_t1) * m_p - m_b2 * m_f;
-		m_t1 = m_b3; m_b3 = (m_b2 + m_t2) * m_p - m_b3 * m_f;
-
-		m_b4 = (m_b3 + m_t1) * m_p - m_b4 * m_f;
-		m_b4 = m_b4 - m_b4 * m_b4 * m_b4 * 0.166667f;	// clipping
-
-		m_b0 = input;
-
-		switch (m_type) {
-		case Notch:
-			return 3.0f * (m_b3 - m_b4) - input;
-		case High:
-			return input - m_b4;
-		case Band:
-			return 3.0f * (m_b3 - m_b4);
-		case Low:
-		default:
-			return m_b4;
-		}
-	}
-
-private:
-
-	Type   m_type;
-
-	float  m_b0, m_b1, m_b2, m_b3, m_b4;
-	float  m_t1, m_t2, m_t3;
-	float  m_f,  m_p,  m_q;
-};
-
-
 // glide (portamento)
 
 struct synthv1_glide
@@ -733,6 +602,7 @@ struct synthv1_voice : public synthv1_list<synthv1_voice>
 
 	synthv1_filter1 dcf11, dcf12, dcf21, dcf22;	// filters
 	synthv1_filter2 dcf13, dcf14, dcf23, dcf24;
+	synthv1_filter3 dcf15, dcf16, dcf25, dcf26;
 
 	synthv1_env::State dca1_env, dca2_env;		// envelope states
 	synthv1_env::State dcf1_env, dcf2_env;
@@ -1624,6 +1494,8 @@ void synthv1_impl::process_midi ( uint8_t *data, uint32_t size )
 					pv->dcf12.reset(synthv1_filter1::Type(type1));
 					pv->dcf13.reset(synthv1_filter2::Type(type1));
 					pv->dcf14.reset(synthv1_filter2::Type(type1));
+					pv->dcf15.reset(synthv1_filter3::Type(type1));
+					pv->dcf16.reset(synthv1_filter3::Type(type1));
 					// envelopes
 					m_dcf1.env.start(&pv->dcf1_env);
 					m_lfo1.env.start(&pv->lfo1_env);
@@ -1668,6 +1540,8 @@ void synthv1_impl::process_midi ( uint8_t *data, uint32_t size )
 					pv->dcf22.reset(synthv1_filter1::Type(type2));
 					pv->dcf23.reset(synthv1_filter2::Type(type2));
 					pv->dcf24.reset(synthv1_filter2::Type(type2));
+					pv->dcf25.reset(synthv1_filter3::Type(type2));
+					pv->dcf26.reset(synthv1_filter3::Type(type2));
 					// envelopes
 					m_dcf2.env.start(&pv->dcf2_env);
 					m_lfo2.env.start(&pv->lfo2_env);
@@ -2187,12 +2061,20 @@ void synthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 				const float reso1 = synthv1_sigmoid_1(*m_dcf1.reso
 					* env1 * (1.0f + *m_lfo1.reso * lfo1));
 
-				if (int(*m_dcf1.slope) > 0) { // 24db/octave
+				switch (int(*m_dcf1.slope)) {
+				case 2: // RBJ/bi-quad
+					mod11 = pv->dcf15.output(mod11, cutoff1, reso1);
+					mod12 = pv->dcf16.output(mod12, cutoff1, reso1);
+					break;
+				case 1: // 24db/octave
 					mod11 = pv->dcf13.output(mod11, cutoff1, reso1);
 					mod12 = pv->dcf14.output(mod12, cutoff1, reso1);
-				} else { // 12db/octave
+					break;
+				case 0: // 12db/octave
+				default:
 					mod11 = pv->dcf11.output(mod11, cutoff1, reso1);
 					mod12 = pv->dcf12.output(mod12, cutoff1, reso1);
+					break;
 				}
 
 				const float env2 = 0.5f * (1.0f + vel2
@@ -2202,12 +2084,20 @@ void synthv1_impl::process ( float **ins, float **outs, uint32_t nframes )
 				const float reso2 = synthv1_sigmoid_1(*m_dcf2.reso
 					* env2 * (1.0f + *m_lfo2.reso * lfo2));
 
-				if (int(*m_dcf2.slope) > 0) { // 24db/octave
+				switch (int(*m_dcf2.slope)) {
+				case 2: // RBJ/bi-quad
+					mod21 = pv->dcf25.output(mod21, cutoff2, reso2);
+					mod22 = pv->dcf26.output(mod22, cutoff2, reso2);
+					break;
+				case 1: // 24db/octave
 					mod21 = pv->dcf23.output(mod21, cutoff2, reso2);
 					mod22 = pv->dcf24.output(mod22, cutoff2, reso2);
-				} else { // 12db/octave
+					break;
+				case 0: // 12db/octave
+				default:
 					mod21 = pv->dcf21.output(mod21, cutoff2, reso2);
 					mod22 = pv->dcf22.output(mod22, cutoff2, reso2);
+					break;
 				}
 
 				// volumes
