@@ -5,6 +5,7 @@ ChangeLog
 
 GIT HEAD
 
+- A third DCF slope/type has been added: the RBJ's bi-quad.
 - Prefer Qt5 over Qt4 by default with configure script.
 - Introducing brand new OUT FX Send parameter per engine.
 - Introducing brand new DCO, LFO Ring Mod(ulator) parameters.
